templates/miq-route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      template: manageiq
    name: manageiq
  spec:
    host: manageiq-cfme.10.35.48.195.nip.io
    port:
      targetPort: http
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: manageiq
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-08-21T08:52:52Z
        status: "True"
        type: Admitted
      host: manageiq-cfme.10.35.48.195.nip.io
      routerName: router
      wildcardPolicy: None
kind: List
metadata: {}
